--- a/Jenkins/Dockerfile.agent
+++ b/Jenkins/Dockerfile.agent
@@ -1,6 +1,6 @@
 FROM jenkins/ssh-agent:latest-bullseye-jdk11
 USER root
-RUN apt-get update -y && apt-get install git python3 python3-dev curl lsb-release -y && rm -rf /var/lib/apt/lists/*
+RUN apt-get update -y && apt-get install git python3 python3-dev curl unzip lsb-release -y && rm -rf /var/lib/apt/lists/*
 RUN curl -fsSLo /usr/share/keyrings/docker-archive-keyring.asc \
   https://download.docker.com/linux/debian/gpg
 RUN echo "deb [arch=$(dpkg --print-architecture) \
@@ -8,3 +8,5 @@ RUN echo "deb [arch=$(dpkg --print-architecture) \
   https://download.docker.com/linux/debian \
   $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list
 RUN apt-get update && apt-get install -y docker-ce-cli
+RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+RUN unzip awscliv2.zip && ./aws/install
