--- a/Jenkins/Dockerfile.agent
+++ b/Jenkins/Dockerfile.agent
@@ -9,4 +9,6 @@ RUN echo "deb [arch=$(dpkg --print-architecture) \
   $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list
 RUN apt-get update && apt-get install -y docker-ce-cli
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-RUN unzip awscliv2.zip && ./aws/install
+RUN unzip awscliv2.zip && ./aws/install && rm awscliv2.zip
+RUN curl --output terraform.zip https://releases.hashicorp.com/terraform/1.2.3/terraform_1.2.3_linux_amd64.zip
+RUN unzip terraform.zip && rm terraform.zip && mv terraform /usr/local/bin/
