Adds kuber hard way README.md

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -10,7 +10,7 @@
 [defaults]
 
 # some basic default values...
-
+inventory      = inventory/aws_ec2.yaml
 #inventory      = /etc/ansible/hosts
 #library        = /usr/share/my_modules/
 #remote_tmp     = $HOME/.ansible/tmp
