--- a/ansible/inventory/aws_ec2.yaml
+++ b/ansible/inventory/aws_ec2.yaml
@@ -1,7 +1,6 @@
 ---
 plugin: aws_ec2
-aws_access_key: <>
-aws_secret_key: <>
+boto_profile: "{{ lookup('env', 'AWS_PROFILE') | default('aws_profile', true) }}"
 
 regions:
   - us-east-1
