--- a/ansible/inventory/aws_ec2.yaml
+++ b/ansible/inventory/aws_ec2.yaml
@@ -1,9 +1,14 @@
----
 plugin: aws_ec2
 boto_profile: "{{ lookup('env', 'AWS_PROFILE') | default('aws_profile', true) }}"
 
 regions:
   - us-east-1
-keyed_groups:
-  - key: tags
-    prefix: tag
+    #keyed_groups:
+    #  - key: tags
+    #prefix: tag
+    #hostnames:
+    #  - tag:Role=Master
+filters:
+  tag:Role: 
+    - Master
+    - Worker
