--- a/ansible/roles/control-plane/tasks/kubeadm-master.yml
+++ b/ansible/roles/control-plane/tasks/kubeadm-master.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Start the cluster
-  shell: "kubeadm init --pod-network-cidr=10.244.0.0/16 --control-plane-endpoint {{ apiserver_loadbalancer_domain_name }}:6443 --upload-certs >> cluster.txt"
+  shell: "kubeadm init --pod-network-cidr={{ pod_cidr }} --control-plane-endpoint {{ apiserver_loadbalancer_domain_name }}:6443 --upload-certs >> cluster.txt"
   args:
     chdir: $HOME
     creates: cluster.txt
